--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path: ^1.9.1
   provider: ^6.1.4
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
