--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   http: ^1.4.0
   intl: ^0.20.2
+  local_auth: ^2.3.0
   path: ^1.9.1
   provider: ^6.1.4
   sqflite: ^2.4.2
