--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  firebase_auth: ^5.6.0
+  firebase_core: ^3.14.0
   flutter:
     sdk: flutter
   http: ^1.4.0
