--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,21 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  cloud_firestore: ^5.6.11
+  file_picker: ^10.2.0
   firebase_auth: ^5.6.0
   firebase_core: ^3.14.0
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.3.0
   http: ^1.4.0
   intl: ^0.20.2
   local_auth: ^2.3.0
   path: ^1.9.1
+  path_provider: ^2.1.5
   provider: ^6.1.4
   sqflite: ^2.4.2
+  workmanager: ^0.7.0
 
 dev_dependencies:
   flutter_test:
